fixed spacing

--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -27,7 +27,7 @@
 }
 .lowerform {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   margin-top: 2rem;
   font-family: "Bungee", cursive;
 }
